Logica aplicada, fixear UI